src/imp/test_source/should_pass/redeclaration.imp
{
    test := 1;
    print test;
    if test == 1 {
        print true
    } else {
        print false
    };
    test := true;
    if test {
        print true
    } else {
        print false
    }
}