src/imp/test_source/should_fail/malformed_ifs.imp
{
    if false {
        print 1
    } else {
        print 2
    } else {
        print 3
    }
}